Bug 346870 - Setting slideshow background with a folder causes plasmashell to signal segfault
Summary: Setting slideshow background with a folder causes plasmashell to signal segfault
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Image & Slideshow wallpaper plugins (other bugs)
Version First Reported In: 5.3.0
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: 1.0
Assignee: Marco Martin
URL:
Keywords:
: 346425 347999 348389 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-04-28 21:37 UTC by Jacob Godserv
Modified: 2015-11-25 10:09 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
kcrash output (38.70 KB, text/plain)
2015-04-28 21:38 UTC, Jacob Godserv
Details
drkonqui inverted trace (51.34 KB, text/plain)
2015-04-29 03:27 UTC, Raúl Arellano
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jacob Godserv 2015-04-28 21:37:36 UTC
This only applies to the Slideshow setting. I can use any of the other background choices.

Reproducible: Always

Steps to Reproduce:
1. Right-click desktop, select "Desktop Settings"
2. Go to Wallpaper, and mae sure you have Layout set to "Desktop", Wallpaper Type set to "Slideshow", Positioning set to "Scaled", and Change every set to "1" Hours, "0" Minutes, and "0" Seconds.
3. Add a folder with images. (Mine has 105 images in it. Almost every image is 2560x1600.)
4. Click OK or Apply. Observe plasmashell immediately restarts and a crash dialog appears.



KDE Framework 5.9, KDE Plasma 5.3, and Konsole 15.04.0 is installed. I do not have very many additional programs.
Comment 1 Jacob Godserv 2015-04-28 21:38:43 UTC
Created attachment 92312 [details]
kcrash output

I've got debugging symbols for Qt and KDE applications. I can install additional debugging symbols if developers find this hard to read.
Comment 2 Raúl Arellano 2015-04-29 03:27:13 UTC
Created attachment 92314 [details]
drkonqui inverted trace

Same problem in kubuntu 15.04 with beta backports (ppa).
drkonqui says the log is probably not useful
Comment 3 Raúl Arellano 2015-04-29 03:51:08 UTC
If the setting was a slideshow (i had it before update to bakports ppa) it will work until you want to modify slideshow settings)

Sorry for bad english (i'm spanish) (in the last comment i wrote "inverted trace", it was backtrace)
Comment 4 Bhushan Shah 2015-04-29 03:59:43 UTC
Crash is in image wallpaper plugin; it also mentions that you tried to delete some wallpaper or something?
Comment 5 Raúl Arellano 2015-04-29 04:16:27 UTC
All i wanted is increase slideshow timing.
Then i changed to solid color.
The i tried again switching to slideshow and it crashed (and uploaded backtrace)
Comment 6 Marco Martin 2015-04-29 07:29:18 UTC
Git commit a234c0923767649cc6545866a563ffc4dba58de2 by Marco Martin.
Committed on 29/04/2015 at 07:28.
Pushed by mart into branch 'Plasma/5.3'.

check for model existence

M  +6    -0    wallpapers/image/image.cpp

http://commits.kde.org/plasma-workspace/a234c0923767649cc6545866a563ffc4dba58de2
Comment 7 Bhushan Shah 2015-05-07 12:19:43 UTC
*** Bug 346425 has been marked as a duplicate of this bug. ***
Comment 8 Ancoron 2015-05-18 17:00:03 UTC
In which upcoming release version will the "fix" be included? Has anyone verified it?
Comment 9 Jacob Godserv 2015-05-18 21:39:28 UTC
The Gentoo KDE folks were kind enough to create a 5.3.0-r1 build just for this bug. I confirmed the patch fixed the issue that way.

Not sure what release this will come in, but I think it's safe to assume this will land in the next plasma-workspace release. It's a very easy patch to backport if you have that capability.
Comment 10 Bhushan Shah 2015-05-21 03:09:16 UTC
*** Bug 347999 has been marked as a duplicate of this bug. ***
Comment 11 Bhushan Shah 2015-05-30 02:59:31 UTC
*** Bug 348389 has been marked as a duplicate of this bug. ***
Comment 12 Theresa 2015-11-25 10:02:34 UTC
has this been fixed yet?
plasmashell eats up 64% of my memory (RAM) and makes the whole system unusable slow :(

  PID USER      PRI  NI  VIRT   RES   SHR S CPU% MEM%   TIME+  Command
  844 theresa    26   6 6167M 2437M 29340 S  0.0 63.4  0:00.04 /usr/bin/plasmashell --shut-up
  788 theresa    26   6 6167M 2437M 29340 S  0.0 63.4  0:00.63 /usr/bin/plasmashell --shut-up 
  851 theresa    26   6 6167M 2437M 29340 S  0.0 63.4  0:00.00 /usr/bin/plasmashell --shut-up 
  870 theresa    26   6 6167M 2437M 29340 S  0.0 63.4  0:01.15 /usr/bin/plasmashell --shut-up 
  938 theresa    26   6 6167M 2437M 29340 S  0.0 63.4  0:00.00 /usr/bin/plasmashell --shut-up 
 1063 theresa    26   6 6167M 2437M 29340 R 98.3 63.4 14:59.13 /usr/bin/plasmashell --shut-up 
 1064 theresa    26   6 6167M 2437M 29340 S  0.0 63.4  0:00.26 /usr/bin/plasmashell --shut-up 
  783 theresa    26   6 6167M 2437M 29340 S 98.8 63.4 15:14.03 /usr/bin/plasmashell --shut-up 

is there a way to fix this?
if so, how?
Comment 13 Marco Martin 2015-11-25 10:09:59 UTC
pasting inline 
Thread 1 (Thread 0x7febbda30800 (LWP 4538)):
[KCrash Handler]
#5  detach (this=0x20) at /usr/include/qt5/QtCore/qlist.h:135
#6  begin (this=0x20) at /usr/include/qt5/QtCore/qlist.h:275
#7  BackgroundListModel::wallpapersAwaitingDeletion (this=0x0) at /var/tmp/portage/kde-plasma/plasma-workspace-5.3.0/work/plasma-workspace-5.3.0/wallpapers/image/backgroundlistmodel.cpp:466
#8  0x00007feae989a418 in Image::commitDeletion (this=0x6018e60) at /var/tmp/portage/kde-plasma/plasma-workspace-5.3.0/work/plasma-workspace-5.3.0/wallpapers/image/image.cpp:802
#9  0x00007feae98a4725 in Image::qt_static_metacall (_o=_o@entry=0x6018e60, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=_id@entry=35, _a=_a@entry=0x7ffcfc43d2e0) at /var/tmp/portage/kde-plasma/plasma-workspace-5.3.0/work/plasma-workspace-5.3.0_build/wallpapers/image/moc_image.cpp:288
#10 0x00007feae98a5147 in Image::qt_metacall (this=0x6018e60, _c=QMetaObject::InvokeMetaMethod, _id=35, _a=0x7ffcfc43d2e0) at /var/tmp/portage/kde-plasma/plasma-workspace-5.3.0/work/plasma-workspace-5.3.0_build/wallpapers/image/moc_image.cpp:395
#11 0x00007febbf1f88b3 in CallMethod (object=object@entry=0x6018e60, index=40, returnType=returnType@entry=43, argCount=argCount@entry=0, argTypes=argTypes@entry=0x0, engine=engine@entry=0x5c163a0, callArgs=callArgs@entry=0x7fea94a0c468) at jsruntime/qv4qobjectwrapper.cpp:1169
#12 0x00007febbf1f9cb0 in CallPrecise (object=object@entry=0x6018e60, data=..., engine=engine@entry=0x5c163a0, callArgs=callArgs@entry=0x7fea94a0c468) at jsruntime/qv4qobjectwrapper.cpp:1407
#13 0x00007febbf1fa3a1 in QV4::QObjectMethod::callInternal (this=<optimized out>, callData=<optimized out>) at jsruntime/qv4qobjectwrapper.cpp:1888
#14 0x00007febbf205829 in call (d=0x7fea94a0c468, this=<optimized out>) at jsruntime/qv4object_p.h:278
#15 QV4::Runtime::callProperty (context=0x7ffcfc43d8c0, name=0x7fea949d4430, callData=0x7fea94a0c468) at jsruntime/qv4runtime.cpp:930
#16 0x00007fea949b5afd in ?? ()
#17 0x0000000006018140 in ?? ()
#18 0x00007fea904ff578 in ?? ()
#19 0x0003000000000001 in ?? ()
#20 0x00007fea9034c3d8 in ?? ()
#21 0x0000000005e8acb0 in ?? ()
#22 0x0000000005cd3c70 in ?? ()
#23 0x0000000005cd3c70 in ?? ()
#24 0x00007fea94a0c458 in ?? ()
#25 0x00007ffcfc43dab0 in ?? ()
#26 0x00007febbf1bb73d in QV4::SimpleScriptFunction::call (that=0x7fea949d4850, callData=<optimized out>) at jsruntime/qv4functionobject.cpp:511
#27 0x00007febbf205829 in call (d=0x7fea94a0c408, this=<optimized out>) at jsruntime/qv4object_p.h:278
#28 QV4::Runtime::callProperty (context=0x7ffcfc43dab0, name=0x7feab16669b0, callData=0x7fea94a0c408) at jsruntime/qv4runtime.cpp:930