check for model existence

BUG:346870